--- a/client/package.json
+++ b/client/package.json
@@ -83,6 +83,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
+    "@types/file-saver": "^2.0.7",
     "@types/js-cookie": "^3.0.6",
     "@types/moment": "^2.13.0",
     "@types/node": "^22.5.1",
@@ -94,6 +95,8 @@
     "eslint": "^9.9.0",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.9",
+    "exceljs": "^4.4.0",
+    "file-saver": "^2.0.5",
     "globals": "^15.9.0",
     "postcss": "^8.4.42",
     "sass": "^1.83.0",
